# edem-agents-tutorials

./: .env.example  .gitignore  README.md  pyproject.toml
entregable/: instructions.md
notebooks/: deploy_gcp_clients.ipynb  evaluations.ipynb  mcp_tool_discovery.ipynb
src/agents_tutorials/: __init__.py
src/tutorials/: model_config.py
src/tutorials/basic_agent/: README.md
src/tutorials/deploy_gcp/: README.md
src/tutorials/evaluations/: README.md  agent_runner.py  conftest.py  judge_model.py  test_evals.py
src/tutorials/mcp_agent/: README.md  run_standalone_client.py
src/tutorials/multi_agent/: README.md
src/tutorials/remote_a2a/: README.md  __init__.py
src/tutorials/sequential_agent/: README.md
src/tutorials/t01_tutorial_agent/: README.md
src/tutorials/t02_basic_agent/: README.md
src/tutorials/t03_sequential_agent/: README.md
src/tutorials/t04_multi_agent/: README.md
src/tutorials/t05_mcp_agent/: README.md  notes_server.py
src/tutorials/t06_remote_a2a/: README.md
src/tutorials/t07_evaluations/: README.md  agent_runner.py  dataset.py  test_evals.py
src/tutorials/t08_deploy_gcp/: README.md  __init__.py
tests/: __init__.py  test_example.py
tutorials/: model_config.py
tutorials/basic_agent/: README.md
tutorials/basic_agent/roll_die/: agent.py
tutorials/mcp_agent/: README.md  model_config.py
tutorials/mcp_agent/filesystem/: agent.py
tutorials/multi_agent/: README.md
tutorials/multi_agent/supervisor/: agent.py  roll_die_agent.py  stats_agent.py
tutorials/remote_a2a/: README.md
tutorials/remote_a2a/roll_die/: __init__.py  (+1 more)
(+21 files in other folders)
