[project]
name = "agents-tutorials"
version = "0.1.0"
description = "Agents tutorials and examples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nest-asyncio[notebooks]>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
adk = [
    "google-adk[a2a]>=0.3",
    "litellm>=1.0",
    "uvicorn>=0.30",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
eval = [
    "deepeval>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tutorials"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tutorials/evaluations"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
